# CPlus_WebServer

./: .gitignore  package-lock.json  package.json
ProjectC++/c_plusbackend_scv/include/: a.out  test.cpp
c_plusbackend_scv/include/: a.out
c_plusfrontendsvc/: package-lock.json  package.json
c_plusfrontendsvc/src/: App.js  index.css
c_plusfrontendsvc/src/pages/: Calculator.js  CalculatorApi.js  CalculatorDisplay.js  CalculatorPanel.js  calculatorButton.js
projectC++Server/: CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  Findrestbed.cmake  main.cpp
projectC++Server/include/: CalcResourceFactory.h  CalcService.h  IResourceFactory.h  IServiceSettingsFactory.h  iResourceFactory.h
